--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%# Eliminar CDN una vez hecho lo basico %>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+    
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
